crates/codegraph-tools/tests/snapshots/snapshot_responses__response_search_symbols_query_engine.snap
---
source: crates/codegraph-tools/tests/snapshot_responses.rs
expression: parsed
---
{
  "limit": 20,
  "offset": 0,
  "results": [
    {
      "file": "[testdata]/engine.cpp",
      "id": "[testdata]/engine.cpp:DebugEngine::dumpState",
      "kind": "method",
      "line": 20,
      "name": "dumpState",
      "parent": "DebugEngine"
    },
    {
      "file": "[testdata]/engine.cpp",
      "id": "[testdata]/engine.cpp:Engine::Engine",
      "kind": "method",
      "line": 4,
      "name": "Engine",
      "parent": "Engine"
    },
    {
      "file": "[testdata]/engine.cpp",
      "id": "[testdata]/engine.cpp:Engine::render",
      "kind": "method",
      "line": 12,
      "name": "render",
      "parent": "Engine"
    },
    {
      "file": "[testdata]/engine.cpp",
      "id": "[testdata]/engine.cpp:Engine::status",
      "kind": "method",
      "line": 16,
      "name": "status",
      "parent": "Engine"
    },
    {
      "file": "[testdata]/engine.cpp",
      "id": "[testdata]/engine.cpp:Engine::update",
      "kind": "method",
      "line": 6,
      "name": "update",
      "parent": "Engine"
    },
    {
      "file": "[testdata]/engine.h",
      "id": "[testdata]/engine.h:DebugEngine",
      "kind": "class",
      "line": 23,
      "name": "DebugEngine"
    },
    {
      "file": "[testdata]/engine.h",
      "id": "[testdata]/engine.h:Engine",
      "kind": "class",
      "line": 10,
      "name": "Engine"
    }
  ],
  "total": 7
}
